--- a/src/components/ClearButton.css
+++ b/src/components/ClearButton.css
@@ -1,12 +1,19 @@
 .clearButton {
   display: flex;
   flex: 1;
-  height: 4em;
+  height: 3.5em;
+  width: 80px;
   align-items: center;
   justify-content: center;
-  font-weight: lighter;
-  font-size: 1em;
-  outline: 1px solid #888;
-  height: 4em;
-  background-color: #c5c3cd;
+
+  font-size: 1.2em;
+  letter-spacing: 3px;
+  border: 1px solid #a3d1df;
+  border-radius: 50px;
+
+  background-color: #50a6c2;
+  color: white;
+  font-weight: 400;
+  cursor: pointer;
+  margin: 5px;
 }
