--- a/src/components/Input.css
+++ b/src/components/Input.css
@@ -7,6 +7,7 @@
   margin-bottom: 5px;
   color: #000;
   justify-content: flex-end;
+  content: "fit-content";
   padding: 0.5em;
   font-weight: 300;
   font-size: 3em;
